--- a/satelliteTutorial.Rmd
+++ b/satelliteTutorial.Rmd
@@ -12,3 +12,5 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Try this for satellite data
 https://www.tylermw.com/a-step-by-step-guide-to-making-3d-maps-with-satellite-imagery-in-r/
+
+See tile JPGS for place...will try in different project.
