--- a/MichiExploration.Rmd
+++ b/MichiExploration.Rmd
@@ -2,15 +2,26 @@
 title: "MichiExploration"
 author: "Laura Slavsky"
 date: "4/20/2020"
-output: html_document
-theme: lumen
+output:
+  prettydoc::html_pretty:
+    theme: cayman
+    highlight: github
 code_folding: hide
 editor_options: 
   chunk_output_type: console
 ---
- prettydoc::html_pretty:
-    theme: cayman
-```{r}
+<style>
+body {
+    font-family: Georgia,"Times New Roman",Times,serif;
+    font-size: 15px;
+    line-height: 1.42857143;
+    color: #000000;
+    background-color: #ffffff;
+}
+</style>
+
+
+```{r knittingOptions, message=FALSE, warning=FALSE, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE)
 ```
 
