--- a/MichiExploration.Rmd
+++ b/MichiExploration.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "MichiExploration"
-author: "Laura Slavsky"
+title: "Michigame Highlands Exploration"
+author: "Laura Slavsky - Conservation Data Lab"
 date: "4/20/2020"
 output:
   prettydoc::html_pretty:
@@ -57,7 +57,9 @@ knitr::include_graphics("Trees.jpg")
 + Summarizing conditions of existing cover, height and type
 + Other
 
-#### This document is intended to be a start for looking into the Michigamme Highlands, and upon further inspection/analysis can be used to delve further into new questions or edited to information pertinent to those who need it. This dataset is also best for looking at the big picture, and not at specific geographic areas - that can be done with map data. Happy Reading! 
+#### This document is intended to be a start for looking into the Michigamme Highlands, and upon further inspection/analysis can be used to delve further into new questions or edited to information pertinent to those who need it. 
+
+#### This dataset is best for looking at the big picture, and not at specific geographic areas - that can be done with map data. Happy Reading! 
 
 
 ```{r echo=FALSE}
@@ -69,20 +71,26 @@ knitr::include_graphics("View.jpg")
 
 #### It is important to understand some key terms when analyzing the data for the Michigamme Highlands. Please consult the brief definitions below before embarking onto the data visualizations. 
 
-### BPS - Biophysical Settings - Historic
+## BPS = Biophysical Settings - Historic
 #### BPS stands for Biophysical Settings. BPS data is what vegetation historically dominated landscapes prior to Euro-American settlement - the ecosystems that were once in a given area. This is estimated accoridng to LANDFIRE.GOV by "the current biophysical environment and an approximation of the historical disturbance regime".
 
-### EVT - Existing Vegetation Type - Current
+## EVT = Existing Vegetation Type - Current
 #### EVT stands for Existing Vegetation Type and includes "the current distribution of the terrestrial ecological systems classification" (LANDFIRE). EVT data is from 2016 and represents current ecosystems. 
 
-#### So a quick recap: **BPS = Historic, EVT = Current**
+## So a quick recap: **BPS = Historic, EVT = Current**
 
-### Group Names and Names
-#### The data includes both "Group Names" and "Names". Names have more specified ecosystem types such as "Laurentian Jack Pine-Red Pine Forest" and "Laurentian-Acadian Sub-boreal Mesic Balsam Fir-Spruce Forest". This means, for example, that two groups that are both Hardwoods may have different names given to them, making looking at the bigger picture of ecosystem types and change over time difficult. 
+### Group Names and Names:
+#### The data include both "Group Names" and "Names". "Names" have more specified ecosystem types such as:
+* "Laurentian Jack Pine-Red Pine Forest"  
+* "Laurentian-Acadian Sub-boreal Mesic Balsam Fir-Spruce Forest"
+* "Northeastern North American Temperate Forest Plantation"
+* Etc.
 
-#### Therefore, "Group Names" are also assigned to the data, allowing larger-scale comparisons of all "Hardwoods", "Conifer", "Riparian", etc. This allows for more effective data visualization of the MH. 
+This means, for example, that two groups that are both Hardwoods may have different names given to them, making looking at the bigger picture of ecosystem types and change over time difficult. 
 
-#### Quick recap: **Group Names = Overall Ecosystem Type, Names = Specified Ecosystem**
+#### Therefore, "Group Names" are also assigned to the data, allowing larger-scale comparisons of all "Hardwoods", "Conifer", "Riparian", etc. This allows for more effective data visualization of the Michigamme Highlands. 
+
+## Quick recap: **Group Names = Overall Ecosystem Type, Names = Specified Ecosystem**
 
 ```{r echo=FALSE}
 knitr::include_graphics("McCormickWilderness.jpg")
@@ -93,10 +101,17 @@ knitr::include_graphics("McCormickWilderness.jpg")
 ### The remainder of this document contains different data visualizations using the data from both BPS and EVT ecosystems. Descriptions are provided to give context and interpretation of each graph. 
 
 
+# Graphs and Interpretation of the Michigamme Highlands:
 
-### First, let's start with looking how group ecosystems have changed over time, starting with BPS (Historic).
+### First, let's start with looking how **group ecosystems** have changed over time.
 
-#### The four most common ecosystems in the MH were Hardwood, Riparian, Conifer, and Hardwood-Conifer. These are the combined Group Names. Hardwoods occupied just under half, 47.9%, of the area. Open water was removed from the groups and Barren-Rock/Sand/Clay which occupied half of one percent of the historic area. 
+#### Using BPS data, the four most common ecosystems (Group Names) in the MH were: 
+* Hardwood
+* Riparian
+* Conifer 
+* Hardwood-Conifer 
+
+#### Hardwoods occupied just under half, 47.9%, of the area. (Open Water was removed from the groups and Barren-Rock/Sand/Clay which occupied half of one percent of the historic area). 
 
 ```{r fix up da BpS group data}
 Michi <- read.csv("michiAllClean.csv")
@@ -129,7 +144,7 @@ ggplot(GP_ACRES_CHOP, aes(x = reorder(BPS_GP_NAME, ACRES), y = ACRES)) +
   geom_bar(stat = "identity", fill = "grey") +
   coord_flip() +
 
-  ggtitle("BPS Group Ecosystems of the MH") +
+  ggtitle("Historical Group Ecosystems of the Michigamme Highlands") +
   labs(x = "", y = "Acres") +
   scale_y_continuous(labels = comma) +
 theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank())
@@ -138,9 +153,13 @@ theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank())
 
 
 
-#### Next, looking at the current (EVT) ecosystem groups:
+#### Next, looking at the current (EVT) Group Names of the Michigamme Highlands:
 
-### There are several more ecosystems currently represented in the Michigamme Highlands compared to the BPS data, even at the group level. The majority of the MH are still hardwood, represented by the "Yellow Birch-Sugar Maple Forest" with over 330,000 acres (__%) throughout dominated by this ecosytem group. There are also other types of hardwood forests such as Pine-Hemlock & Spruce-Fir represented. 
+### There are several more ecosystems currently represented in the Michigamme Highlands compared to the BPS data, even at the group level. The majority of the MH are still hardwood, represented by the "Yellow Birch-Sugar Maple Forest" with over 330,000 acres (44%) in this group. 
+
+### Any ecosystem <2% of the total acreage was omitted from the following graph. 
+
+Compared to total acres, there is a relatively small percentage (5.3%) of developed land, and minimal (0.08%) Agriculture. 
 
 
 ```{r fix up da EVT group data}
@@ -172,12 +191,18 @@ ggplot(EVT_GP_ACRES_CHOP, aes(x = reorder(EVT_200_GP_NAME, ACRES), y = ACRES)) +
   theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank(),
         panel.background = element_blank(), axis.line = element_line(colour = "black"))
 ```
-(Might need to change cut off it <5%? - percent isn't working...)
 
 
-#### Now, let's focus in on more specific ecosystem names historically and currently in the MH, starting with BPS.
+## Conclusions of Group Ecosystems (Historic and Present) of the Michigamme Highlands:
+* Hardwoods compose a significant acreage of the area
+* There are few (<2%) degraded areas such as plantations, agriculture, strip-mining, etc. 
+* Though there is not much degredation, development is the 5th most common ecosystem type in the MH
 
-###
+
+
+#### Now, let's focus in on more specific ecosystem names historically and currently in the MH.
+
+### 
 
 ```{r fix up da BpS name data}
 
