--- a/MichiExploration.Rmd
+++ b/MichiExploration.Rmd
@@ -20,10 +20,13 @@ body {
 }
 </style>
 
+```{r global_options, include=FALSE}
+# From Internet:
+knitr::opts_chunk$set(fig.width=8, fig.height=6, fig.path='Figs/',
+                      echo=FALSE, warning=FALSE, message=FALSE)
 
-```{r knittingOptions, message=FALSE, warning=FALSE, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE)
 ```
+
 
 
 ```{r echo=FALSE}
@@ -37,11 +40,9 @@ library(prettydoc)
 library(plotly)
 ```
 
-# Michigamme Highlands Ecosystem Exploration
+# **Michigamme Highlands Ecosystem Exploration**
 
-```{r echo=FALSE}
-knitr::include_graphics("Trees.jpg")
-```
+(Put photo of map here)
 
 ## Questions for Exploration:
 The main quesiton being explored in this document is: **How much of the Michigamme Highlands (MH) is in good versus bad condition?** The Data explored, provided by Randy Swaty, include over 90,000 rows and were formed by combining:
@@ -113,14 +114,14 @@ Each graph can be "hovered" over with a mouse to see total acres for the given G
 
 First, let's start with looking how **group ecosystems** have changed over time.
 
-Using BPS data, the four most common ecosystems (Group Names) in the MH were: 
+Using BPS data, the four most common historic ecosystems (Group Names) in the MH were: 
 
 * Hardwood
 * Riparian
 * Conifer 
 * Hardwood-Conifer 
 
-Hardwoods occupied just under half, 47.9%, of the area. (Open Water was removed from the groups and Barren-Rock/Sand/Clay which occupied half of one percent of the historic area). 
+Hardwoods occupied just under half, 47.9%, of the area. (Open Water was removed from the groups as well as Barren-Rock/Sand/Clay which occupied half of one percent of the historic area). 
 
 
 ```{r fix up da BpS group data}
@@ -153,7 +154,8 @@ ggplot(GP_ACRES_CHOP, aes(x = reorder(BPS_GP_NAME, ACRES), y = ACRES)) +
   ggtitle("Historical Group Ecosystems of the MH") +
   labs(x = "", y = "Acres") +
   scale_y_continuous(labels = comma) +
-theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank())
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank(),
+        panel.background = element_blank(), axis.line = element_line(colour = "black"))
         #panel.background = element_blank(), axis.line = element_line(colour = "black"))
 ggplotly(hist_grp)
 
@@ -213,7 +215,7 @@ Primary Conclusions of Group Ecosystems (Historic and Present) of the Michigamme
 
 Now, let's focus in on more specific **ecosystem names** historically and currently in the MH.
 
-Historically, hardwoods made up a significant portion (59.6%), with Laurentian-Acadian Northern Hardwoods, Northern Hardwoods - Hemlock, and Pine-Hemlock-Hardwood forest being the top three named ecosystems. 
+Historically, hardwoods made up a significant portion (59.6%) of the Michigamme Highlands, with Laurentian-Acadian Northern Hardwoods, Northern Hardwoods - Hemlock, and Pine-Hemlock-Hardwood forest being the top three named ecosystems. 
 
 Any Ecosystem Name representing <2% of the total acerage was omitted from the following graph. 
 
@@ -248,24 +250,25 @@ ggplot(BPS_NAME_CHOP, aes(x = reorder(BPS_NAME, ACRES), y = ACRES)) +
 
 ```
 
-Moving to current ecosystems, there are over 
+There are 75 named ecosystems for the current (EVT) data of the Michigamme Highlands. However, all ecosystems beyond the top 9 compose less than 2% each of the MH, so have been omitted from the graph. 
 
 ```{r fix up da EVT name data}
 EVT_200_NAME <- Michi %>% #Creating new dataframe with just EVT_200_NAME and ACRES
   group_by(EVT_200_NAME) %>% 
   summarise(ACRES = sum(ACRES))
 
-
 # And the descenidng order:
 EVT_200_NAME_Desc <- arrange(EVT_200_NAME, desc(ACRES))
 
+# Removing Open Water:
+EVT_200_NAME_Desc <- EVT_200_NAME_Desc[-c(7), ] #7 is name of row "Open Water"
 
-# AHH! Too many to see! Let's narrow to 35 and see what we get. Might need to do more than that.
-EVT_35 <- EVT_200_NAME_Desc[c(1:35),]
-
+# Adding % Column:
+EVT_200_NAME_Desc = mutate(EVT_200_NAME_Desc,
+                           EVT_Pct = (ACRES / sum(ACRES)) *100)
 
 # Let's make it top 12 (?) Seems somewhat arbitrary but at a dropoff point
-EVT_NAME_CHOP <- EVT_35[c(1:12),]
+EVT_NAME_CHOP <- EVT_200_NAME_Desc[c(1:9),]
 
 ```
 
@@ -276,12 +279,12 @@ ggplot(EVT_NAME_CHOP, aes(x = reorder(EVT_200_NAME, ACRES), y = ACRES)) +
   geom_bar(stat = "identity", fill = "grey") +
   coord_flip() +
   
-  ggtitle("Top 12 EVT Names") +
+  ggtitle("Top 9 Current Ecosystem Names of the MH") +
   labs(x = "", y = "Acres") +
   scale_y_continuous(labels = comma) +
   theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank(),
         panel.background = element_blank(), axis.line = element_line(colour = "black"))
-ggplotly(hist_grp)
+#ggplotly(hist_grp)
 ```
 
 
