--- a/MichiExploration.Rmd
+++ b/MichiExploration.Rmd
@@ -6,19 +6,12 @@ output:
   prettydoc::html_pretty:
     theme: cayman
     highlight: github
+    toc: TRUE
 code_folding: hide
 editor_options: 
   chunk_output_type: console
 ---
-<style>
-body {
-    font-family: Georgia,"Times New Roman",Times,serif;
-    font-size: 15px;
-    line-height: 1.42857143;
-    color: #000000;
-    background-color: #ffffff;
-}
-</style>
+
 
 ```{r global_options, include=FALSE}
 # From Internet:
@@ -26,7 +19,6 @@ knitr::opts_chunk$set(fig.width=8, fig.height=6, fig.path='Figs/',
                       echo=FALSE, warning=FALSE, message=FALSE)
 
 ```
-
 
 
 ```{r echo=FALSE}
