--- a/MichiExploration.Rmd
+++ b/MichiExploration.Rmd
@@ -297,7 +297,7 @@ The last components of the Michigamme Highlands we will look at in this document
 
 For looking at EVC & EVH, we decided to create "heatmaps". R-Graph-Gallery describes a heatmap as "a graphical representation of data where the individual values contained in a matrix are represented as colors." The darker the color 
 
-```{r echo=FALSE}
+```{r echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.keep='all'}
 evc_evt5 <- read_csv("evc_evt5.csv", col_types = cols(percent = col_number()))
 
 
